# Tiny-Aya-Under-the-hood

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  TinyAya_Analysis_Colab_MemoryOptimized.ipynb  pyproject.toml
agent_docs/: project_description.md
analysis/cross_lingual_embedding_alignment/: 01_data_preparation.ipynb  04_language_family_clustering.ipynb  05_anisotropy_whitened_cka.ipynb  06_retrieval_alignment.ipynb  07_script_decomposition.ipynb  09_cross_model_drift.ipynb  paperback.md
analysis/results/cross_lingual/metrics/: anisotropy_metrics.json  clustering_metrics.json  convergence_curve.json  cross_model_drift.json  regional_comparison.json  retrieval_scores.json  script_metrics.json
data/: test_data_translation_output.csv
layer_sensitivity/: tiny_aya_sensitivity_analysis.ipynb
linear_proping/: design_doc.md
linear_proping/datasets/: language_id_probing_data.json  pos_probing_data.json
linear_proping/notebooks/: 01_data_preparation.ipynb  pos_probing_data.json
src/: __init__.py
src/analysis/: __init__.py
src/analysis/cross_lingual_embedding_alignment/: __init__.py  cka.py  clustering.py  cross_lingual_alignment.py  hooks.py  retrieval_metrics.py  visualization.py
src/data/: __init__.py  flores_loader.py  translate_data_openai.py
src/data/linguistic_variation/: dedup_dataset.py  generate_linguistic_variation.py  review_linguistic_variation.py
src/utils/: __init__.py  languages.py
tests/: __init__.py  test_cka.py  test_hooks.py  test_languages.py  test_retrieval.py
type_alignment/: README.md  analyzer.py  inference.py  retrieval_metrics.py  visualization.py
type_alignment/results/: type_alignment_results.md
uth/: __init__.py
uth/ablation_study/: README.md  dataset_utils.py  intervention.py  runner.py
uth/data/: alignment_pairs_loader.py  test_data.csv  translate_data_openai.py
uth/data/linguistic_variation/: dedup_dataset.py  generate_linguistic_variation.py  linguistic_variation.json  review_linguistic_variation.py
uth/utils/: __init__.py  languages.py
